--- a/index.html
+++ b/index.html
@@ -2,9 +2,26 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
     <title>kkofu</title>
   </head>
   <body>
-    <h1 class="title">Hello internet</h1>
+    <header>
+      <h1 class="title">Hello, Internet</h1>
+      <img class="title" src="header.png">
+    </header>
+    <main>
+      <div class="window">
+        <h4> Banner </h4>
+        <p>
+          <a href="https://kkofu.github.io" class="linkimage"><img
+              src="banner.png"></a><br>
+        <h4 class="center"><br><br>Links<br></h4>
+        <p>
+          <a href="https://ideoaves.github.io/" class="linkimage"><img
+              src="https://ideoaves.github.io/banner.png" width="200px" height="40px" alt="Ideoaves"></a>
+        </p>
+      </div>
+    </main>
   </body>
 </html>
