--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <h1 class="title">Hello, Internet</h1>
-      <img class="title" src="header.png">
+      <!--<img class="title" src="header.png">-->
     </header>
     <main>
       <div class="window">
