--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h4> Banner </h4>
         <p>
           <a href="https://kkofu.github.io" class="linkimage"><img
-              src="banner.png"></a><br>
+              src="banner.png" width=100%></a><br>
         <h4 class="center"><br><br>Links<br></h4>
         <p>
           <a href="https://ideoaves.github.io/" class="linkimage"><img
