--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
   <body>
     <header>
       <h1 class="title">Hello, Internet</h1>
-      <!--<img class="title" src="header.png">-->
+      <img class="title" src="header.png" width=100%>
     </header>
     <main>
       <div class="window">
-        <h4> Banner </h4>
+        <h4 class="center"><br><br>Banner<br></h4>
         <p>
           <a href="https://kkofu.github.io" class="linkimage"><img
-              src="banner.png" width=100%></a><br>
-        <h4 class="center"><br><br>Links<br></h4>
+              src="banner.png" width="200px" height="40px"></a><br>
+        <h4 class="center"><br>Links<br></h4>
         <p>
           <a href="https://ideoaves.github.io/" class="linkimage"><img
               src="https://ideoaves.github.io/banner.png" width="200px" height="40px" alt="Ideoaves"></a>
