--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
   </head>
   <body>
     <header>
-      <h1 class="title">Hello, Internet</h1>
+      <h1 class="title">This is a web page.</h1>
       <img class="title" src="header.png" width=100%>
     </header>
     <main>
+      <div class="text">
+        <h4>Hello, internet!<br></h4>
+      </div>
       <div class="window">
-        <h4 class="center"><br><br>Banner<br></h4>
+        <h4 class="center"><br>Banner<br></h4>
         <p>
           <a href="https://kkofu.github.io" class="linkimage"><img
               src="banner.png" width="200px" height="40px"></a><br>
