--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
   <body>
     <header>
       <h1 class="title">This is a web page.</h1>
+      <h4 class="center">Hello, Internet!<br></h4>
       <img class="title" src="header.png" width=100%>
     </header>
     <main>
-      <div class="text">
-        <h4>Hello, internet!<br></h4>
-      </div>
       <div class="window">
-        <h4 class="center"><br>Banner<br></h4>
+        <h4 class="center"><br>Banner</h4>
+        <h5 class="center">not ready ;)<br></h5>
         <p>
           <a href="https://kkofu.github.io" class="linkimage"><img
               src="banner.png" width="200px" height="40px"></a><br>
