--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
   <body>
     <header>
       <h1 class="title">This is a web page.</h1>
-      <h4 class="center">Hello, Internet!<br></h4>
+      <h3 class="center">Hello, Internet!<br></h3>
       <img class="title" src="header.png" width=100%>
     </header>
     <main>
       <div class="window">
-        <h4 class="center"><br>Banner</h4>
-        <h5 class="center">not ready ;)<br></h5>
+        <h3 class="center"><br>Banner</h3>
+        <h5 class="center">not ready ;)</h5>
         <p>
           <a href="https://kkofu.github.io" class="linkimage"><img
-              src="banner.png" width="200px" height="40px"></a><br>
+              src="banner.png" width="200px" height="40px"></a><br><br>
         <h4 class="center"><br>Links<br></h4>
         <p>
           <a href="https://ideoaves.github.io/" class="linkimage"><img
