--- a/index.html
+++ b/index.html
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
-    <title>kkofu</title>
-  </head>
-  <body>
-    <header>
+<html lang="en">
+<head>
+   <meta charset="utf-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>kkofu</title>
+   <link rel="stylesheet" href="style.css">
+</head>
+<body>
+   <header>
       <h1 class="title">This is a web page.</h1>
-      <h3 class="center">Hello, Internet!<br></h3>
-      <img class="title" src="header.png" width=100%>
-    </header>
-    <main>
+      <h4 class="header">Hello, Internet!</h4>
+      <img src="header.png" width=100% alt="">
+   </header>
+   <main>
       <div class="window">
-        <h3 class="center"><br>Banner</h3>
-        <h5 class="center">not ready ;)</h5>
-        <p>
-          <a href="https://kkofu.github.io" class="linkimage"><img
-              src="banner.png" width="200px" height="40px"></a><br><br>
-        <h4 class="center"><br>Links<br></h4>
-        <p>
-          <a href="https://ideoaves.github.io/" class="linkimage"><img
-              src="https://ideoaves.github.io/banner.png" width="200px" height="40px" alt="Ideoaves"></a>
-        </p>
+         <p>
+            <h3 class="center">Banner</h3>
+            <a href="https://kkofu.github.io" class="linkimage"><img 
+               src="banner.png" width="200px" height="40px"></a>
+            <a class="small-text"> not ready ;)</a>
+         </p>
+         <p>
+            <h3 class="center"><br>Links</h4>
+            <a href="https://ideoaves.github.io/" class="linkimage"><img 
+               src="https://ideoaves.github.io/banner.png" width="200px" height="40px" alt="Ideoaves"></a>
+         </p>
       </div>
-    </main>
-  </body>
+   </main>
+</body>
 </html>
