--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>kkofu</title>
-   <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" href="style.css"
 </head>
 <body>
    <header>
       <h1 class="title">This is a web page.</h1>
       <h4 class="header">Hello, Internet!</h4>
-      <img src="header.png" width=100% alt="">
+      <img src="images/header.png" width=100% alt="">
    </header>
    <main>
       <div class="window">
