--- a/index.html
+++ b/index.html
@@ -9,16 +9,14 @@
 <body>
    <header>
       <h1 class="title">This is a web page.</h1>
-      <h4 class="header">Hello, Internet!</h4>
-      <img src="images/header.png" width=100% alt="">
+      <h4 class="intro">Hello, Internet!</h4>
    </header>
    <main>
       <div class="window">
          <p>
             <h3 class="center">Banner</h3>
-            <a href="https://kkofu.github.io" class="linkimage"><img 
-               src="banner.png" width="200px" height="40px"></a>
-            <a class="small-text"> not ready ;)</a>
+            <a href="https://kkofu.github.io" class="linkimage"><img class="banner-img" 
+               src="images/banner.png" width="200px" height="40px"></a>
          </p>
          <p>
             <h3 class="center"><br>Links</h4>
