--- a/index.html
+++ b/index.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
    <meta charset="utf-8">
+   <meta name="description" content="This is a web page.">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>kkofu</title>
    <link rel="stylesheet" href="style.css"
 </head>
+
 <body>
    <header>
-      <h1 class="title">This is a web page.</h1>
-      <h4 class="intro">Hello, Internet!</h4>
+      <h1 style="font-size: 3em;">This is a web page.</h1>
+      <h4 style="font-size: 0.8em; padding-bottom: 100px;">Hello, Internet!</h4>
    </header>
    <main>
       <div class="window">
          <p>
-            <h3 class="center">Banner</h3>
-            <a href="https://kkofu.github.io" class="linkimage"><img class="banner-img" 
-               src="images/banner.png" width="200px" height="40px"></a>
-         </p>
-         <p>
-            <h3 class="center"><br>Links</h4>
-            <a href="https://ideoaves.github.io/" class="linkimage"><img 
+            <h3 style="padding-bottom: 10px;"><a href="profile.html" style="color: var(--linkcol);">Profile</a></h3>
+            <h3><br>Banner</h3>
+            <a href="https://kkofu.github.io" class="link-img"><img 
+               src="images/banner.png" style="border: solid 1px white;" width="200px" height="40px"></a>
+            <h3><br>Outer Links</h3>
+            <a href="https://ideoaves.github.io/" class="link-img"><img 
                src="https://ideoaves.github.io/banner.png" width="200px" height="40px" alt="Ideoaves"></a>
          </p>
       </div>
