--- a/404.html
+++ b/404.html
@@ -7,12 +7,15 @@
    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <div style="text-align: center; margin:10%; background-color: #0000FF; padding:100px;">
-      <image src="404.png" width="70%"></a>
+   <div style="text-align: center; background-color: #0000FF; padding:100px;">
+      <image src="404.png" width="50%"></a>
       <ul>
-         <a href="https://kkofu.github.io/index.html"><li class="botan bold">TOP</li></a>
+         <a href="https://kkofu.github.io/index.html"><li class="button">TOP</li></a>
       </ul>
-      <a style="font: 100px Courier;">404</a>
+      <a style="font-size: 100px">404</a>
    </div>
 </body>
+<footer>
+   <h4><a href="https://kkofu.github.io">kkofu</a> &copy; 2024~</h4>
+</footer>
 </html>
