--- a/profile.html
+++ b/profile.html
@@ -4,7 +4,7 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Profile</title>
-   <link rel="stylesheet" href="style.css"
+   <link rel="stylesheet" href="style.css">
 </head>
 <body>
    <div class="window">
@@ -20,4 +20,7 @@
       </p>
    </div>
 </body>
+<footer>
+   <h4><a href="https://kkofu.github.io">kkofu</a> &copy; 2024~</h4>
+</footer>
 </html>
