--- a/index.html
+++ b/index.html
@@ -7,39 +7,40 @@
    <meta name="twitter:card" content="summary" />
    <meta name="twitter:title" content="kkofu" />
    <meta name="twitter:description" content="This is a web page." />
-   <meta name="twitter:image" content="https://kkofu.github.io/icon.png" />
+   <meta name="twitter:image" content="https://kkofu.github.io/images/bg.png" />
    <title>kkofu</title>
-   <link rel="stylesheet" href="style.css"
+   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
    <header>
       <h1 style="font-size: 3em;">This is a web page.</h1>
-      <h4 style="font-size: 0.75em; padding-bottom: 110px;">Hello, Internet!</h4>
+      <h4 style="font-size: 0.75em;">Hello, Internet!</h4>
    </header>
    <main>
       <div class="window">
-         <p>
-            <h3 style="padding-bottom: 10px;"><a href="profile.html" style="color: var(--linkcol);">Profile</a></h3>
-            <h3><br>Banner</h3>
-            <a href="https://kkofu.github.io" class="link-img"><img 
-               src="images/banner.png" style="border: solid 1px white;" 
-               width="200px" height="40px" alt="kkofu"></a> link free!
-               <details>
-                  <summary>source</summary>
-                  <code>
-                     &lt;a href=&quot;https://kkofu.github.io&quot;&gt;&lt;img src=&quot;https://kkofu.github.io/images/banner.png&quot; width="200px" height="40px"&gt;&lt;/a&gt;
-                  </code>
-                </details>
-            <h3><br>Links(One-way)</h3>
-            <a href="https://ideoaves.github.io/" class="link-img"><img 
-               src="https://ideoaves.github.io/banner.png" 
-               width="200px" height="40px" alt="Ideoaves"></a>
-            <a href="https://www.suzumenome.com"><img 
-               src="https://www.suzumenome.com/mutual-links/banners/szmnm-banner01.png" 
-               width=auto height="40" border="0"alt="すずめのめオフィシャルWEB バナー"></a>
-         </p>
+         <h3 style="padding-bottom: 75px;"><a href="profile.html">Profile</a></h3>
+         <h3><br>Banner</h3>
+         <a href="https://kkofu.github.io" class="link-img"><img 
+            src="images/banner.png" style="border: solid 1px white;" 
+            width="200px" height="40px" alt="kkofu"></a> link free!
+            <details>
+               <summary>source</summary>
+               <code>
+                  &lt;a href=&quot;https://kkofu.github.io&quot;&gt;&lt;img src=&quot;https://kkofu.github.io/images/banner.png&quot; width="200px" height="40px" alt=&quot;kkofu&quot;&gt;&lt;/a&gt;
+               </code>
+            </details>
+         <h3><br>Links(One-way)</h3>
+         <a href="https://ideoaves.github.io/" class="link-img"><img 
+            src="https://ideoaves.github.io/banner.png" 
+            width="200px" height="40px" alt="Ideoaves"></a>
+         <a href="https://www.suzumenome.com"><img 
+            src="https://www.suzumenome.com/mutual-links/banners/szmnm-banner02.png" 
+            width=auto height="40" border="0" alt="すずめのめオフィシャルWEB バナー"></a>
       </div>
    </main>
+   <footer>
+      <h4><a href="https://kkofu.github.io">kkofu</a> &copy; 2024~</h4>
+   </footer>
 </body>
 </html>
