--- a/404.html
+++ b/404.html
@@ -8,14 +8,15 @@
 </head>
 <body>
    <div style="text-align: center; background-color: #0000FF; padding:100px;">
-      <image src="404.png" width="50%"></a>
+      <a style="font-size: 7em">404</a>
+      <br>
       <ul>
-         <a href="https://kkofu.github.io/index.html"><li class="button">TOP</li></a>
+         <a href="./"><li class="button">TOP</li></a>
       </ul>
-      <a style="font-size: 100px">404</a>
+      <image src="images/404.png" width="30%"></a>
    </div>
 </body>
 <footer>
-   <h4><a href="https://kkofu.github.io">kkofu</a> &copy; 2024~</h4>
+   <h4><a href="./">kkofu</a> &copy; 2024~</h4>
 </footer>
 </html>
