--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-   <meta charset="utf-8">
+   <meta charset="UTF-8">
    <meta name="description" content="This is a web page.">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta name="twitter:card" content="summary" />
@@ -14,33 +14,35 @@
 
 <body>
    <header>
-      <h1 style="font-size: 3em;">This is a web page.</h1>
-      <h4 style="font-size: 0.75em;">Hello, Internet!</h4>
+      <h1 style="font-size: 3.5em;">This is a web page.</h1>
+      <h6 class="header">Hello, Internet!</h6>
    </header>
    <main>
       <div class="window">
-         <h3 style="padding-bottom: 75px;"><a href="profile.html">Profile</a></h3>
-         <h3><br>Banner</h3>
+         <li><h3><a href="about.html">About</a></h3></li>
+         <li><h3 style="padding-bottom: 500px;"><a href="profile.html">Profile</a></h3></li>
+         <h3>Banner</h3>
          <a href="https://kkofu.github.io" class="link-img"><img 
-            src="images/banner.png" style="border: solid 1px white;" 
-            width="200px" height="40px" alt="kkofu"></a> link free!
+            src="images/banner.png" style="border: solid 0.75px white;" 
+            width=auto height="80px" alt="kkofu"></a> link free!
             <details>
                <summary>source</summary>
                <code>
-                  &lt;a href=&quot;https://kkofu.github.io&quot;&gt;&lt;img src=&quot;https://kkofu.github.io/images/banner.png&quot; width="200px" height="40px" alt=&quot;kkofu&quot;&gt;&lt;/a&gt;
+                  &lt;a href=&quot;https://kkofu.github.io&quot;&gt;&lt;img src=&quot;https://kkofu.github.io/images/banner.png&quot; width="242px" height="40px" alt=&quot;kkofu&quot;&gt;&lt;/a&gt;
                </code>
             </details>
-         <h3><br>Links(One-way)</h3>
+         <br><br>
+         <h3>Links(One-way yet)</h3>
          <a href="https://ideoaves.github.io/" class="link-img"><img 
             src="https://ideoaves.github.io/banner.png" 
-            width="200px" height="40px" alt="Ideoaves"></a>
+            width="400px" height="80px" alt="Ideoaves"></a>
          <a href="https://www.suzumenome.com"><img 
             src="https://www.suzumenome.com/mutual-links/banners/szmnm-banner02.png" 
-            width=auto height="40" border="0" alt="すずめのめオフィシャルWEB バナー"></a>
+            width=auto height="80px" border="0" alt="すずめのめオフィシャルWEB バナー"></a>
       </div>
    </main>
    <footer>
-      <h4><a href="https://kkofu.github.io">kkofu</a> &copy; 2024~</h4>
+      <h4><a href="./">kkofu</a> &copy; 2024~</h4>
    </footer>
 </body>
 </html>
