--- a/profile.html
+++ b/profile.html
@@ -2,25 +2,25 @@
 <html lang="ja">
 <head>
    <meta charset="UTF-8">
+   <meta name="description" content="kofu">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta name="twitter:card" content="summary" />
+   <meta name="twitter:title" content="kkofu" />
+   <meta name="twitter:description" content="kofu" />
+   <meta name="twitter:image" content="https://kkofu.github.io/images/bg.png" />
    <title>Profile</title>
    <link rel="stylesheet" href="style.css">
 </head>
 <body>
    <div class="window">
-      <p>
-         <img src="images/selfie.JPEG" width="100%" title="著者遠影" alt="著者遠影">
-      </p><br><br><br><br>
-      <p>
-         <h3>Links</h3>
-         <a href="https://scrapbox.io/kofu-lab/" 
-         style="background-color: #00b42e; color: #ffffff">scrapbox</a>
-         <a href="https://discord.com/users/1008287185277034597"
-         style="background-color: #5562f6; color: #ffffff">Discord</a>
-      </p>
+      <h1 style="font-size: 3.5em; text-align: center;">kofu</h1>
+      <img src="images/selfie.JPEG" style="padding-bottom: 150px;"width="100%" title="Picture of Author" alt="">
+      <h1>Links</h1>
+      <li><a href="https://scrapbox.io/kofu-lab/" target="_blank" style="background-color: #00b42e; color: white">scrapbox</a></li><br>
+      <li><a href="https://discord.com/users/1008287185277034597" target="_blank" style="background-color: #5562f6; color: white">Discord</a></li>
    </div>
 </body>
 <footer>
-   <h4><a href="https://kkofu.github.io">kkofu</a> &copy; 2024~</h4>
+   <h4><a href="./">kkofu</a> &copy; 2024~</h4>
 </footer>
 </html>
