--- a/index.html
+++ b/index.html
@@ -15,30 +15,38 @@
 <body>
    <header>
       <h1 style="font-size: 3.5em;">This is a web page.</h1>
-      <h6 class="header">Hello, Internet!</h6>
+      <h6 class="header-small">Hello, Internet!</h6>
    </header>
    <main>
       <div class="window">
-         <li><h3><a href="about.html">About</a></h3></li>
-         <li><h3 style="padding-bottom: 500px;"><a href="profile.html">Profile</a></h3></li>
-         <h3>Banner</h3>
-         <a href="https://kkofu.github.io" class="link-img"><img 
-            src="images/banner.png" style="border: solid 0.75px white;" 
-            width=auto height="80px" alt="kkofu"></a> link free!
-            <details>
-               <summary>source</summary>
-               <code>
-                  &lt;a href=&quot;https://kkofu.github.io&quot;&gt;&lt;img src=&quot;https://kkofu.github.io/images/banner.png&quot; width="242px" height="40px" alt=&quot;kkofu&quot;&gt;&lt;/a&gt;
-               </code>
-            </details>
-         <br><br>
-         <h3>Links(One-way yet)</h3>
-         <a href="https://ideoaves.github.io/" class="link-img"><img 
-            src="https://ideoaves.github.io/banner.png" 
-            width="400px" height="80px" alt="Ideoaves"></a>
-         <a href="https://www.suzumenome.com"><img 
-            src="https://www.suzumenome.com/mutual-links/banners/szmnm-banner02.png" 
-            width=auto height="80px" border="0" alt="すずめのめオフィシャルWEB バナー"></a>
+         <ul class="top-bullet">
+            <li><h3><a href="about.html">About</a></h3></li>
+            <li><h3><a href="profile.html">Profile</a></h3></li>
+            <li><h3>Links</h3>
+               <ul class="top-links">
+                  <li><a href="https://scrapbox.io/kofu-lab/" target="_blank" style="background-color: #00b42e; color: white">scrapbox</a></li><br>
+                  <li><a href="https://discord.com/users/1008287185277034597" target="_blank" style="background-color: #5562f6; color: white">Discord</a></li>
+               </ul>
+            </li>
+            <h3  style="padding-top: 400px;">Banner</h3>
+            <a href="https://kkofu.github.io" class="link-img"><img 
+               src="images/banner.png" style="border: solid 0.75px white;" 
+               width=auto height="80px" alt="kkofu"></a> link free!
+               <details>
+                  <summary>source</summary>
+                  <code>
+                     &lt;a href=&quot;https://kkofu.github.io&quot;&gt;&lt;img src=&quot;https://kkofu.github.io/images/banner.png&quot; width="242px" height="40px" alt=&quot;kkofu&quot;&gt;&lt;/a&gt;
+                  </code>
+               </details>
+            <br><br>
+            <h3>Links(One-way yet)</h3>
+            <a href="https://ideoaves.github.io/" class="link-img"><img 
+               src="https://ideoaves.github.io/banner.png" 
+               width="400px" height="80px" alt="Ideoaves"></a>
+            <a href="https://www.suzumenome.com"><img 
+               src="https://www.suzumenome.com/mutual-links/banners/szmnm-banner02.png" 
+               width=auto height="80px" border="0" alt="すずめのめオフィシャルWEB バナー"></a>
+         </ul>
       </div>
    </main>
    <footer>
