--- a/profile.html
+++ b/profile.html
@@ -14,10 +14,7 @@
 <body>
    <div class="window">
       <h1 style="font-size: 3.5em; text-align: center;">kofu</h1>
-      <img src="images/selfie.JPEG" style="padding-bottom: 150px;"width="100%" title="Picture of Author" alt="">
-      <h1>Links</h1>
-      <li><a href="https://scrapbox.io/kofu-lab/" target="_blank" style="background-color: #00b42e; color: white">scrapbox</a></li><br>
-      <li><a href="https://discord.com/users/1008287185277034597" target="_blank" style="background-color: #5562f6; color: white">Discord</a></li>
+      <img src="images/selfie.JPEG" width="100%" title="Photo of Author" alt="">
    </div>
 </body>
 <footer>
