--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+   <link rel="preload" as="fetch" crossorigin="anonymous" href="images/bg_dark.png">
    <meta charset="UTF-8">
    <meta name="description" content="This is a web page.">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +10,7 @@
    <meta name="twitter:description" content="This is a web page." />
    <meta name="twitter:image" content="https://kkofu.github.io/images/bg.png" />
    <title>kkofu</title>
-   <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" href="assets/style.css">
 </head>
 
 <body>
@@ -24,28 +25,28 @@
             <li><h3><a href="profile.html">Profile</a></h3></li>
             <li><h3>Links</h3>
                <ul class="top-links">
-                  <li><a href="https://scrapbox.io/kofu-lab/" target="_blank" style="background-color: #00b42e; color: white">scrapbox</a></li><br>
+                  <li><a href="https://scrapbox.io/kofu-lab/" style="background-color: #00b42e; color: white">scrapbox</a></li><br>
                   <li><a href="https://discord.com/users/1008287185277034597" target="_blank" style="background-color: #5562f6; color: white">Discord</a></li>
                </ul>
             </li>
             <h3  style="padding-top: 400px;">Banner</h3>
             <a href="https://kkofu.github.io" class="link-img"><img 
-               src="images/banner.png" style="border: solid 0.75px white;" 
-               width=auto height="80px" alt="kkofu"></a> link free!
-               <details>
+               src="images/banner.png" style="border: .75px solid white;" 
+               width="200px" height=auto alt="kkofu"></a> link free!
+               <details style="border: .5px solid #444">
                   <summary>source</summary>
                   <code>
                      &lt;a href=&quot;https://kkofu.github.io&quot;&gt;&lt;img src=&quot;https://kkofu.github.io/images/banner.png&quot; width="242px" height="40px" alt=&quot;kkofu&quot;&gt;&lt;/a&gt;
                   </code>
                </details>
             <br><br>
-            <h3>Links(One-way yet)</h3>
+            <h3>Links(One-way)</h3>
             <a href="https://ideoaves.github.io/" class="link-img"><img 
                src="https://ideoaves.github.io/banner.png" 
-               width="400px" height="80px" alt="Ideoaves"></a>
+               width="200px" height="40px" alt="Ideoaves"></a>
             <a href="https://www.suzumenome.com"><img 
                src="https://www.suzumenome.com/mutual-links/banners/szmnm-banner02.png" 
-               width=auto height="80px" border="0" alt="すずめのめオフィシャルWEB バナー"></a>
+               width=auto height="40px" border="0" alt="すずめのめオフィシャルWEB バナー"></a>
          </ul>
       </div>
    </main>
