--- a/profile.html
+++ b/profile.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+   <link rel="preload" as="fetch" href="assets/style.css">
+   <link rel="preload" as="fetch" href="images/selfie.JPEG">
    <meta charset="UTF-8">
    <meta name="description" content="kofu">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,8 +10,8 @@
    <meta name="twitter:title" content="kkofu" />
    <meta name="twitter:description" content="kofu" />
    <meta name="twitter:image" content="https://kkofu.github.io/images/bg.png" />
+   <link rel="stylesheet" href="assets/style.css">
    <title>Profile</title>
-   <link rel="stylesheet" href="style.css">
 </head>
 <body>
    <div class="window">
