--- a/assets/template.html
+++ b/assets/template.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+   <link rel="preload" as="fetch" crossorigin="anonymous" href="images/bg_dark.png">
    <meta charset="UTF-8">
    <meta name="description" content="">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +10,7 @@
    <meta name="twitter:description" content="" />
    <meta name="twitter:image" content="https://kkofu.github.io/images/bg.png" />
    <title></title>
-   <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
    <div style="window">
