--- a/fomula.html
+++ b/fomula.html
@@ -9,8 +9,13 @@
    <meta name="twitter:title" content="kkofu" />
    <meta name="twitter:description" content="" />
    <meta name="twitter:image" content="https://kkofu.github.io/images/bg.png" />
-   <title></title>
+   <title>fomula</title>
+   <script src="https://openprocessing.org/openprocessing_sketch.js"></script>
+   <script src="https://cdn.jsdelivr.net/npm/p5@1.9.4/lib/p5.js"></script>
+   <script src="https://cdn.jsdelivr.net/npm/p5@1.9.4/lib/addons/p5.sound.min.js"></script>
+   <script src="assets/fomula.js"></script>
    <link rel="stylesheet" href="assets/style.css">
+   <link rel="stylesheet" type="text/css" href="assets/fomula.css">
 </head>
 <body>
    <div style="window">
