--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
                   <li><a href="https://discord.com/users/1008287185277034597" target="_blank" style="background-color: #5562f6; color: white">Discord</a></li>
                </ul>
             </li>
-            <h3  style="padding-top: 400px;">Banner</h3>
+            <div class="fomula">
+               <iframe src="https://openprocessing.org/sketch/1832743/embed/" 
+               width="290px" height="400px"></iframe>
+            </div>
+               <h3  style="padding-top: 400px;">Banner</h3>
             <a href="https://kkofu.github.io" class="link-img"><img 
                src="images/banner.png" style="border: .75px solid white;" 
                width="200px" height=auto alt="kkofu"></a> link free!
