--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
    <meta name="twitter:image" content="https://kkofu.github.io/images/bg.png" />
    <title>kkofu</title>
    <link rel="stylesheet" href="assets/style.css">
+   <script src="https://openprocessing.org/openprocessing_sketch.js"></script>
+   <script src="https://cdn.jsdelivr.net/npm/p5@1.9.4/lib/p5.js"></script>
+   <script src="https://cdn.jsdelivr.net/npm/p5@1.9.4/lib/addons/p5.sound.min.js"></script>
+   <script src="https://cdn.jsdelivr.net/npm/tweakpane@1.0.4/dist/tweakpane.min.js"></script>
+   <!-- <script src="assets/fomula.js"></script> -->
 </head>
 
 <body>
@@ -29,10 +34,10 @@
                   <li><a href="https://discord.com/users/1008287185277034597" target="_blank" style="background-color: #5562f6; color: white">Discord</a></li>
                </ul>
             </li>
-            <div class="fomula">
+            <!--<div class="fomula">
                <iframe src="https://openprocessing.org/sketch/1832743/embed/" 
                width="290px" height="400px"></iframe>
-            </div>
+            </div>-->
                <h3  style="padding-top: 400px;">Banner</h3>
             <a href="https://kkofu.github.io" class="link-img"><img 
                src="images/banner.png" style="border: .75px solid white;" 
