--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
    <meta name="twitter:image" content="https://kkofu.github.io/images/bg.png" />
    <title>kkofu</title>
    <link rel="stylesheet" href="assets/style.css">
+   <!--
    <script src="https://openprocessing.org/openprocessing_sketch.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/p5@1.9.4/lib/p5.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/p5@1.9.4/lib/addons/p5.sound.min.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/tweakpane@1.0.4/dist/tweakpane.min.js"></script>
-   <!-- <script src="assets/fomula.js"></script> -->
+   <script src="assets/fomula.js"></script>
+   -->
 </head>
 
 <body>
@@ -28,6 +30,7 @@
          <ul class="top-bullet">
             <li><h3><a href="about.html">About</a></h3></li>
             <li><h3><a href="profile.html">Profile</a></h3></li>
+            <li><h3><a href="yon.html">Contents</a></h3></li>
             <li><h3>Links</h3>
                <ul class="top-links">
                   <li><a href="https://scrapbox.io/kofu-lab/" style="background-color: #00b42e; color: white">scrapbox</a></li><br>
@@ -38,7 +41,7 @@
                <iframe src="https://openprocessing.org/sketch/1832743/embed/" 
                width="290px" height="400px"></iframe>
             </div>-->
-               <h3  style="padding-top: 400px;">Banner</h3>
+               <h3  style="padding-top: 350px;">Banner</h3>
             <a href="https://kkofu.github.io" class="link-img"><img 
                src="images/banner.png" style="border: .75px solid white;" 
                width="200px" height=auto alt="kkofu"></a> link free!
