--- a/404.html
+++ b/404.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>404</title>
-   <link rel="stylesheet" href="assets/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>404</title>
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-   <div style="text-align: center; background-color: #0000FF; padding:100px;">
-      <a style="font-size: 7em">404</a>
-      <br>
-      <ul>
-         <a href="./"><li class="button">TOP</li></a>
-      </ul>
-      <image src="images/404.png" width="30%"></a>
-   </div>
+    <div style="text-align: center; background-color: #0000FF; margin: 100px; padding:100px 100px 50px;"><br><br>
+        <a style="font-size: 8em">404</a><br><br><br><br>
+        <a href="./"><li class="button">TOP</li></a>
+    </div>
+    <div style="position: fixed; bottom: 0; left: 1.5%;"">
+        <a href="assets/bin"><image src="images/404.png" width="30%"></image></a>
+    </div>
+    <footer>
+        <h4><a href="./">kkofu</a> &copy; 2024~</h4>
+    </footer>
 </body>
-<footer>
-   <h4><a href="./">kkofu</a> &copy; 2024~</h4>
-</footer>
 </html>
