--- a/contents.html
+++ b/contents.html
@@ -10,8 +10,13 @@
     <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-    <div>
-    </div>
+    <header>
+        <h1 style="font-size: 2.5em; margin: 1em 0 1em;">not much to see here yet.</h1>
+    </header>
+    <main>
+        <ul>
+            <li><a href="random-internet.html">Random Access Internets</a></li>
+        </ul>
     <footer>
         <h4><a href="./">kkofu</a> &copy; 2024~</h4>
     </footer>
