--- a/index.html
+++ b/index.html
@@ -1,69 +1,66 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-   <link rel="preload" as="fetch" crossorigin="anonymous" href="images/bg_dark.png">
-   <meta charset="UTF-8">
-   <meta name="description" content="This is a web page.">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta name="twitter:card" content="summary" />
-   <meta name="twitter:title" content="kkofu" />
-   <meta name="twitter:description" content="This is a web page." />
-   <meta name="twitter:image" content="https://kkofu.github.io/images/bg.png" />
-   <title>kkofu</title>
-   <link rel="stylesheet" href="assets/style.css">
-   <!--
-   <script src="https://openprocessing.org/openprocessing_sketch.js"></script>
-   <script src="https://cdn.jsdelivr.net/npm/p5@1.9.4/lib/p5.js"></script>
-   <script src="https://cdn.jsdelivr.net/npm/p5@1.9.4/lib/addons/p5.sound.min.js"></script>
-   <script src="https://cdn.jsdelivr.net/npm/tweakpane@1.0.4/dist/tweakpane.min.js"></script>
-   <script src="assets/fomula.js"></script>
-   -->
+    <link rel="preload" as="fetch" crossorigin="anonymous" href="images/bg_darker.png">
+    <link rel="stylesheet" href="assets/style.css">
+    <meta charset="UTF-8">
+    <meta name="description" content="This is a web page.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="twitter:image" content="https://kkofu.github.io/images/bg.png" />
+    <title>kkofu</title>
+    <!--
+    <script src="https://openprocessing.org/openprocessing_sketch.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.9.4/lib/p5.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.9.4/lib/addons/p5.sound.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/tweakpane@1.0.4/dist/tweakpane.min.js"></script>
+    <script src="assets/fomula.js"></script>
+    -->
 </head>
 
 <body>
-   <header>
-      <h1 style="font-size: 3.5em;">This is a web page.</h1>
-      <h6 class="header-small">Hello, Internet!</h6>
-   </header>
-   <main>
-      <div class="window">
-         <ul class="top-bullet">
-            <li><h3><a href="about.html">About</a></h3></li>
-            <li><h3><a href="profile.html">Profile</a></h3></li>
-            <li><h3><a href="yon.html">Contents</a></h3></li>
-            <li><h3>Links</h3>
-               <ul class="top-links">
-                  <li><a href="https://scrapbox.io/kofu-lab/" style="background-color: #00b42e; color: white">scrapbox</a></li><br>
-                  <li><a href="https://discord.com/users/1008287185277034597" target="_blank" style="background-color: #5562f6; color: white">Discord</a></li>
-               </ul>
-            </li>
+    <header>
+        <h1 style="font-size: 3.5em;">This is a web page.</h1>
+        <a href="yon.html" class="header-small">Hello, Internet!</a>
+    </header>
+    <main>
+        <div>
+            <ul class="top-bullet">
+                <li><h3><a href="about.html">About</a></h3></li>
+                <li><h3><a href="contents.html">Contents</a></h3></li>
+                <li><h3><a href="profile.html">Profile</a></h3></li>
+                <li><h3>Links</h3>
+                    <ul class="top-links">
+                        <li><a href="https://scrapbox.io/kofu-lab/" style="background-color: #00b42e; color: white">scrapbox</a></li><br>
+                        <li><a href="https://discord.com/users/1008287185277034597" target="_blank" style="background-color: #5562f6; color: white">Discord</a></li>
+                    </ul>
+                </li>
+            </ul>
             <!--<div class="fomula">
-               <iframe src="https://openprocessing.org/sketch/1832743/embed/" 
-               width="290px" height="400px"></iframe>
+                <iframe src="https://openprocessing.org/sketch/1832743/embed/" 
+                width="290px" height="400px"></iframe>
             </div>-->
-               <h3  style="padding-top: 350px;">Banner</h3>
+            <h3  style="padding-top: 350px;">Banner</h3>
             <a href="https://kkofu.github.io" class="link-img"><img 
-               src="images/banner.png" style="border: .75px solid white;" 
-               width="200px" height=auto alt="kkofu"></a> link free!
-               <details style="border: .5px solid #444">
-                  <summary>source</summary>
-                  <code>
-                     &lt;a href=&quot;https://kkofu.github.io&quot;&gt;&lt;img src=&quot;https://kkofu.github.io/images/banner.png&quot; width="242px" height="40px" alt=&quot;kkofu&quot;&gt;&lt;/a&gt;
-                  </code>
-               </details>
+                src="images/banner.png" style="border: .75px solid white;" 
+                width="200px" height=auto alt="kkofu"></a> link free!
+                <details style="border: .5px solid #444">
+                    <summary>source</summary>
+                    <code>
+                        &lt;a href=&quot;https://kkofu.github.io&quot;&gt;&lt;img src=&quot;https://kkofu.github.io/images/banner.png&quot; width="242px" height="40px" alt=&quot;kkofu&quot;&gt;&lt;/a&gt;
+                    </code>
+                </details>
             <br><br>
             <h3>Links(One-way)</h3>
             <a href="https://ideoaves.github.io/" class="link-img"><img 
-               src="https://ideoaves.github.io/banner.png" 
-               width="200px" height="40px" alt="Ideoaves"></a>
+                src="https://ideoaves.github.io/banner.png" 
+                width="200px" height="40px" alt="Ideoaves"></a>
             <a href="https://www.suzumenome.com"><img 
-               src="https://www.suzumenome.com/mutual-links/banners/szmnm-banner02.png" 
-               width=auto height="40px" border="0" alt="すずめのめオフィシャルWEB バナー"></a>
-         </ul>
-      </div>
-   </main>
-   <footer>
-      <h4><a href="./">kkofu</a> &copy; 2024~</h4>
-   </footer>
+                src="https://www.suzumenome.com/mutual-links/banners/szmnm-banner02.png" 
+                width=auto height="40px" border="0" alt="すずめのめオフィシャルWEB バナー"></a>
+        </div>
+    </main>
+    <footer>
+        <h4><a href="./">kkofu</a> &copy; 2024~</h4>
+    </footer>
 </body>
 </html>
