--- a/random-internet.html
+++ b/random-internet.html
@@ -6,12 +6,18 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="twitter:image" content="https://kkofu.github.io/images/bg.png" />
-    <title></title>
+    <title>random-internet</title>
     <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-    <div>
-    </div>
+    <main>
+        <h1 style="font-size: 2.5em; margin: 1em 0 1em;">Random Access Internets</h1>
+        <h4>Big-tech algorythm free.</h4><br>
+        <ul  class="top-bullet">
+            <li><h3><a href="https://en.wikipedia.org/wiki/Special:Random" style="color: white;">Wikipedia</a></h3></li>
+            <li><h3><a href="https://ytroulette.com/"  style="color: red;">YouTube</a></h1></li>
+        </ul>
+    </main>
     <footer>
         <h4><a href="./">kkofu</a> &copy; 2024~</h4>
     </footer>
