--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
         <a href="./"><li class="button">TOP</li></a>
     </div>
     <div style="position: fixed; bottom: 0; left: 1.5%;"">
-        <a href="assets/bin"><image src="images/404.png" width="30%"></image></a>
+        <a href="assets/.txt"><image src="images/404.png" width="30%"></image></a>
     </div>
     <footer>
         <h4><a href="./">kkofu</a> &copy; 2024~</h4>
