--- a/contents.html
+++ b/contents.html
@@ -11,11 +11,16 @@
 </head>
 <body>
     <header>
-        <h1 style="font-size: 2.5em; margin: 1em 0 1em;">not much to see here yet.</h1>
+        <h1 class="common-head">not much to see here yet.</h1>
     </header>
     <main>
-        <ul>
+        <ul class="top-bullet">
             <li><a href="random-internet.html">Random Access Internets</a></li>
+            <li><a href="fomula.html">fomula</a> by <a href="https://openprocessing.org/user/335085" style="color: #1a878e;">melonade</a>
+                <ul class="ul-sec">
+                    <li>edit the this background yourself!</li>
+                </ul>
+            </li>
         </ul>
     <footer>
         <h4><a href="./">kkofu</a> &copy; 2024~</h4>
