--- a/index.html
+++ b/index.html
@@ -25,20 +25,16 @@
     <main>
         <div>
             <ul class="top-bullet">
-                <li><h3><a href="about.html">About</a></h3></li>
-                <li><h3><a href="contents.html">Contents</a></h3></li>
-                <li><h3><a href="profile.html">Profile</a></h3></li>
-                <li><h3>Links</h3>
-                    <ul class="top-links">
+                <li><a href="about.html">About</a></li>
+                <li><a href="contents.html">Contents</a></li>
+                <li><a href="profile.html">Profile</a></li>
+                <li>Links
+                    <ul class="ul-sec">
                         <li><a href="https://scrapbox.io/kofu-lab/" style="background-color: #00b42e; color: white">scrapbox</a></li><br>
                         <li><a href="https://discord.com/users/1008287185277034597" target="_blank" style="background-color: #5562f6; color: white">Discord</a></li>
                     </ul>
                 </li>
             </ul>
-            <!--<div class="fomula">
-                <iframe src="https://openprocessing.org/sketch/1832743/embed/" 
-                width="290px" height="400px"></iframe>
-            </div>-->
             <h3  style="padding-top: 350px;">Banner</h3>
             <a href="https://kkofu.github.io" class="link-img"><img 
                 src="images/banner.png" style="border: .75px solid white;" 
