--- a/random-internet.html
+++ b/random-internet.html
@@ -11,11 +11,11 @@
 </head>
 <body>
     <main>
-        <h1 style="font-size: 2.5em; margin: 1em 0 1em;">Random Access Internets</h1>
-        <h4>Big-tech algorythm free.</h4><br>
+        <h1 class="common-head" style="margin-bottom: 0;">Random Access Internets</h1>
+        <h4  style="margin-bottom: 3em;">Big-tech algorythm free.</h4>
         <ul  class="top-bullet">
-            <li><h3><a href="https://en.wikipedia.org/wiki/Special:Random" style="color: white;">Wikipedia</a></h3></li>
-            <li><h3><a href="https://ytroulette.com/"  style="color: red;">YouTube</a></h1></li>
+            <li><a href="https://en.wikipedia.org/wiki/Special:Random" style="color: white;">Wikipedia</a></li>
+            <li><a href="https://ytroulette.com/"  style="color: red;">YouTube</a></li>
         </ul>
     </main>
     <footer>
