--- a/assets/template.html
+++ b/assets/template.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <link rel="preload" as="fetch" crossorigin="anonymous" href="images/bg_dark.png">
     <meta charset="UTF-8">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="twitter:image" content="https://kkofu.github.io/images/bg.png" />
-    <title></title>
     <link rel="stylesheet" href="assets/style.css">
+    <link rel="icon" href="images/favicon.ico">
+    <title></title>
 </head>
 <body>
     <div>
