--- a/contents.html
+++ b/contents.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <link rel="preload" as="fetch" crossorigin="anonymous" href="images/bg_dark.png">
     <meta charset="UTF-8">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="twitter:image" content="https://kkofu.github.io/images/bg.png" />
-    <title></title>
     <link rel="stylesheet" href="assets/style.css">
+    <link rel="icon" href="images/favicon.ico">
+    <title>Contents</title>
 </head>
 <body>
     <header>
@@ -15,7 +15,7 @@
     </header>
     <main>
         <ul class="top-bullet">
-            <li><a href="random-internet.html">Random Access Internets</a></li>
+            <li><a href="random-internet.html">Random Access Internet</a></li>
             <li><a href="fomula.html">fomula</a> by <a href="https://openprocessing.org/user/335085" style="color: #1a878e;">melonade</a>
                 <ul class="ul-sec">
                     <li>edit the this background yourself!</li>
