--- a/fomula.html
+++ b/fomula.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <link rel="preload" as="fetch" crossorigin="anonymous" href="images/bg_dark.png">
     <meta charset="UTF-8">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="twitter:image" content="https://kkofu.github.io/images/bg.png" />
-    <title>fomula</title>
 	<script src="https://openprocessing.org/openprocessing_sketch.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/p5@1.10.0/lib/p5.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/p5@1.10.0/lib/addons/p5.sound.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/tweakpane@3.1.4/dist/tweakpane.min.js"></script>
     <link rel="stylesheet" href="assets/fomula.css">
+    <link rel="icon" href="images/favicon.ico">
+    <title>fomula</title>
 </head>
 <body>
     <main>
