--- a/fusen.html
+++ b/fusen.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <link rel="preload" as="fetch" crossorigin="anonymous" href="images/bg_dark.png">
     <meta charset="UTF-8">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="twitter:image" content="https://kkofu.github.io/images/bg.png" />
-    <title>インターネットの栞</title>
-    <link rel="stylesheet" href="assets/shiori.css">
+    <link rel="stylesheet" href="assets/fusen.css">
+    <link rel="icon" href="images/favicon.ico">
+    <title>インターネットの付箋</title>
 </head>
 <body>
     <div class="introduction">
-        インターネットの栞<br>
-        <p style="font-size: 0.6em;">インターネットの栞は、栞を付されたインターネットの切れ端たちです。</p>
+        インターネットの付箋<br>
+        <p style="font-size: 0.6em;">インターネットの付箋は、付箋を付されたインターネットの切れ端たちです。</p>
     </div>
     <div>
         <div class="output-box">
