--- a/profile.html
+++ b/profile.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <link rel="preload" as="fetch" href="assets/style.css">
     <link rel="preload" as="fetch" href="images/selfie.JPEG">
     <meta charset="UTF-8">
     <meta name="description" content="kofu">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="twitter:image" content="https://kkofu.github.io/images/bg.png" />
     <link rel="stylesheet" href="assets/style.css">
+    <link rel="icon" href="images/favicon.ico">
     <title>Profile</title>
 </head>
 <body>
