--- a/random-internet.html
+++ b/random-internet.html
@@ -6,12 +6,13 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="twitter:image" content="https://kkofu.github.io/images/bg.png" />
-    <title>random-internet</title>
     <link rel="stylesheet" href="assets/style.css">
+    <link rel="icon" href="images/favicon.ico">
+    <title>Random Access Internet</title>
 </head>
 <body>
     <main>
-        <h1 class="common-head" style="margin-bottom: 0;">Random Access Internets</h1>
+        <h1 class="common-head" style="margin-bottom: 0;">Random Access Internet</h1>
         <h4  style="margin-bottom: 3em;">Big-tech algorythm free.</h4>
         <ul  class="top-bullet">
             <li><a href="https://en.wikipedia.org/wiki/Special:Random" style="color: white;">Wikipedia</a></li>
