--- a/404.html
+++ b/404.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404</title>
     <link rel="stylesheet" href="assets/style.css">
+    <link rel="icon" href="images/favicon.ico">
+    <title>Page not found</title>
 </head>
 <body>
     <div style="text-align: center; background-color: #0000FF; margin: 100px; padding:100px 100px 50px;"><br><br>
