--- a/index.html
+++ b/index.html
@@ -1,22 +1,14 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <link rel="preload" as="fetch" crossorigin="anonymous" href="images/bg_darker.png">
-    <link rel="stylesheet" href="assets/style.css">
     <meta charset="UTF-8">
     <meta name="description" content="This is a web page.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="twitter:image" content="https://kkofu.github.io/images/bg.png" />
-    <title>kkofu</title>
-    <!--
-    <script src="https://openprocessing.org/openprocessing_sketch.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.9.4/lib/p5.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.9.4/lib/addons/p5.sound.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/tweakpane@1.0.4/dist/tweakpane.min.js"></script>
-    <script src="assets/fomula.js"></script>
-    -->
+    <link rel="stylesheet" href="assets/style.css">
+    <link rel="icon" href="images/favicon.ico">
+    <title>Top - kkofu.github.io</title>
 </head>
-
 <body>
     <header>
         <h1 style="font-size: 3.5em;">This is a web page.</h1>
