--- a/contents.html
+++ b/contents.html
@@ -11,14 +11,14 @@
 </head>
 <body>
     <header>
-        <h1 class="common-head">not much to see here yet.</h1>
+        <h1 class="common-head">not much to see here yet</h1>
     </header>
     <main>
         <ul class="top-bullet">
             <li><a href="random-internet.html">Random Access Internet</a></li>
             <li><a href="fomula.html">fomula</a> by <a href="https://openprocessing.org/user/335085" style="color: #1a878e;">melonade</a>
                 <ul class="ul-sec">
-                    <li>edit the this background yourself!</li>
+                    <li>edit this background yourself!</li>
                 </ul>
             </li>
         </ul>
