--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                 <li>Links
                     <ul class="ul-sec">
                         <li><a href="https://scrapbox.io/kofu-lab/" style="background-color: #00b42e; color: white">scrapbox</a></li><br>
-                        <li><a href="https://discord.com/users/1008287185277034597" target="_blank" style="background-color: #5562f6; color: white">Discord</a></li>
+                        <li><a href="https://discord.com/users/1008287185277034597" target="_blank" style="background-color: #5562f6; color: white">Discord</a></li><br>
+                        <li><a href="https://nostter.app/kkofu@kkofu.github.io" style="background-color: #9543dc; color: white;">nostr</a></li>
                     </ul>
                 </li>
             </ul>
