--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
                 <li><a href="profile.html">Profile</a></li>
                 <li>Links
                     <ul class="ul-sec">
+                        <li><a href="https://kiite.jp/user/kofu_" style="background-color: darkslategray; color: white;">kiite</a></li><br>
                         <li><a href="https://scrapbox.io/kofu-lab/" style="background-color: #00b42e; color: white">scrapbox</a></li><br>
                         <li><a href="https://discord.com/users/1008287185277034597" target="_blank" style="background-color: #5562f6; color: white">Discord</a></li><br>
-                        <li><a href="https://nostter.app/kkofu@kkofu.github.io" style="background-color: #9543dc; color: white;">nostr</a></li>
+                        <li><a href="https://nostter.app/kkofu@kkofu.github.io" style="background-color: #16202a; color: #71c9f7;">nostr</a></li>
                     </ul>
                 </li>
             </ul>
