--- a/contents.html
+++ b/contents.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <h1 class="common-head">not much to see here yet</h1>
+        <h1 class="common-head">There's not much here (yet)</h1>
     </header>
     <main>
         <ul class="top-bullet">
